[metadata]
name = regobslib
version = 0.2.6
author = Aron Widforss
author_email = arwi@nve.no
description = Client library for Regobs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NVE/regobslib
project_urls =
    API Documentation = http://api.nve.no/doc/regobs/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    pytz
    pandas
    numpy

[options.packages.find]
where = src
